# harness-tui

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.changes/: 0.1.1.md  0.1.2.md
.github/workflows/: ci.yml  pylint.yml  pytest.yml  ruff.yml
src/harness_tui/: __main__.py  api.py  app.py  app.tcss  fetch_logs.py  login.py  models.py  openAPI.py  utils.py
src/harness_tui/api/: __init__.py  logs.py  mixin.py  pipeline.py
src/harness_tui/components/: __init__.py  execution_history.py  log_view.py  pipeline_list.py  pipelines_list.py  yaml_editor.py
src/harness_tui/models/: __init__.py  pipeline.py
src/harness_tui/vectordb/: __init__.py  interface.py  setup.py
src/harness_tui/vectordb/data/sample-lancedb/vector_ids.lance/: _latest.manifest
src/harness_tui/vectordb/data/sample-lancedb/vector_ids.lance/_transactions/: 0-5d3f9b9b-a2c4-4346-acb0-c70ae82bb202.txn
src/harness_tui/vectordb/data/sample-lancedb/vector_ids.lance/_versions/: 1.manifest
src/harness_tui/vectordb/data/sample-lancedb/vector_ids.lance/data/: 429a796e-ee18-4b26-8ad3-f4149d19481a.lance
src/harness_tui/vectordb/data/sample-lancedb/vector_idss.lance/_transactions/: 0-994518c7-9e63-4d45-a556-9be56c2e775d.txn
src/harness_tui/vectordb/data/sample-lancedb/vector_idss.lance/_versions/: 1.manifest
tests/: test_api.py
