[tool.poetry]
name = "harness-tui"
version = "0.1.0"
description = "A text user interface for managing and interacting with harness.io"
authors = ["z3z1ma <butler.alex2010@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.9,<3.13"
textual = {extras = ["syntax"], version = "^0.63.5"}
lancedb = "^0.8.0"
python-dotenv = "^1.0.1"
pydantic = "^2.7.2"
sseclient-py = "^1.8.0"
pyyaml = "^6.0.1"
jsonschema = "^4.22.0"
pandas = "^2.2.2"
openai = "^1.30.5"
langchain = "^0.2.1"
langchain-openai = "^0.1.8"
langchain-community = "^0.2.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
ruff = "^0.4.6"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
